--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,9 @@
 
     <!--a11y used in activity_movie_details.xml and poster_grid_item.xml-->
     <string name="poster_a11y">Movie poster</string>
-    <string name="backdrop_a11y">Movie backdrop image</string>
+    <string name="backdrop_a11y">Movie backdrop</string>
+    <string name="trailer_a11y">Movie trailer</string>
+    <string name="play_trailer_a11y">Play movie trailer</string>
 
     <!--tools:text used in activity_movie_details.xml-->
     <string name="toolstext_title" translatable="false">Dilwale Dulhania Le Jayenge</string>
@@ -35,4 +37,9 @@
         being an NRI is very strict about adherence to Indian values. Simran has left for India to
         be married to her childhood fiancé. Raj leaves for India with a mission at his hands, to
         claim his lady love under the noses of her whole family. Thus begins a saga.</string>
+
+    <!--tools:text used in trailer_list_item.xml-->
+    <string name="toolstext_trailer_name" translatable="false">Ho Gaya Hai Tujhko To Pyar
+        Sajna - song by CinePlusPlus</string>
+    <string name="toolstext_trailer_type" translatable="false">Clip</string>
 </resources>
