--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Popular Movies</string>
 
     <!--Used in overflow menu to sort movie posters in various ways-->
-    <string name="menu_most_popular">Sort by popularity</string>
-    <string name="menu_highest_rated">Sort by rating</string>
-    <string name="menu_favorites">Show favorites</string>
+    <string name="menu_most_popular">Most Popular</string>
+    <string name="menu_highest_rated">Highest Rated</string>
+    <string name="menu_favorites">Favorites</string>
 
     <!--Toast message shown after movie sorting is changed-->
     <string name="toast_most_popular">Most popular movies.</string>
@@ -25,7 +25,7 @@
     <string name="error_empty_list">Unable to retrieve movies.\n\n Please try again.</string>
     <string name="error_remove_favorite">Removing from favorites failed. Try again.</string>
     <string name="error_add_favorite">Adding to favorites failed. Try again.</string>
-    <string name="error_empty_favorites">No favorites found.</string>
+    <string name="error_empty_favorites">You have no favorites.</string>
 
     <!--Message displayed to user when no movie release date or votes are found-->
     <string name="error_missing_info">Unknown</string>
